--- a/src/css/jasmine.css
+++ b/src/css/jasmine.css
@@ -1,5 +1,7 @@
 body { background-color: #eeeeee; padding: 0; margin: 5px; overflow-y: scroll; }
 
+.navigation-bar { background-color: #a6b779; padding: 10px; }
+.navigation-bar button { height: 30px; text-transform: uppercase; }
 .html-reporter { font-size: 11px; font-family: Monaco, "Lucida Console", monospace; line-height: 14px; color: #333333; }
 .html-reporter a { text-decoration: none; }
 .html-reporter a:hover { text-decoration: underline; }
